--- a/index.html
+++ b/index.html
@@ -44,10 +44,15 @@
   </section>
 
 <div class="w3-content w3-section" style="max-width:500px">
-  <p>i love flowers and photography please find some of my favorite pictures i have taken below</p>
-  <img class="mySlides" src="img_la.jpg" style="width:100%">
-  <img class="mySlides" src="img_ny.jpg" style="width:100%">
-  <img class="mySlides" src="img_chicago.jpg" style="width:100%">
+  <p>i love flowers and photography please find some of my favorite pictures I have taken below</p>
+  <img class="mySlides" src="/images/flowersfavs/flower1.jpg" style="width:100%">
+  <img class="mySlides" src="/images/flowersfavs/flower3.jpg" style="width:100%">
+  <img class="mySlides" src="/images/flowersfavs/flower4.jpg" style="width:100%">
+  <img class="mySlides" src="/images/flowersfavs/flower5.jpg" style="width:100%">
+  <img class="mySlides" src="/images/flowersfavs/flower6.jpg" style="width:100%">
+  <img class="mySlides" src="/images/flowersfavs/flower7.jpg" style="width:100%">
+  <img class="mySlides" src="/images/flowersfavs/flower8.jpg" style="width:100%">
+
 </div>
 
 <script>
@@ -58,11 +63,11 @@ function carousel() {
   var i;
   var x = document.getElementsByClassName("mySlides");
   for (i = 0; i < x.length; i++) {
-    x[i].style.display = "none";  
+    x[i].style.display = "none";
   }
   myIndex++;
-  if (myIndex > x.length) {myIndex = 1}    
-  x[myIndex-1].style.display = "block";  
+  if (myIndex > x.length) {myIndex = 1}
+  x[myIndex-1].style.display = "block";
   setTimeout(carousel, 2000); // Change image every 2 seconds
 
   //hi
@@ -73,6 +78,6 @@ function carousel() {
 
 
 
-  
+
 </body>
 </html>
