--- a/designinspo.html
+++ b/designinspo.html
@@ -33,7 +33,7 @@ body{
 
 	<!-- Navigation (Stays on Top) -->
 <div class="w3-top w3-bar">
-<a href="idex.html" class="w3-bar-item w3-button w3-mobile">Home</a>
+<a href="index.html" class="w3-bar-item w3-button w3-mobile">Home</a>
 <a href="funny.html" class="w3-bar-item w3-button w3-mobile">Funny</a>
 <a href="fears.html" class="w3-bar-item w3-button w3-mobile">Fears</a>
 <a href="favs.html" class="w3-bar-item w3-button w3-mobile">Favs</a>
@@ -43,6 +43,6 @@ body{
 </div>
 <br>
 <br>
-<img src="/images/sfe.png">
+<img src="images/sfe.png">
 </body>
 </html>
