--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <style>
   body{
     padding:50px;
-     margin: 0 0 18px;
+    margin: 0 0 18px;
     font-family: "futura-pt";
     line-height: 1.2;
     letter-spacing: 0.2em;
@@ -21,14 +21,18 @@
     color:#66ccff;
     font-weight: bold;
   }
-  .intro{
-     border: 3px solid;
-  }
+.photosection{
+
+  background-color: #d3d3d3;
+  margin: 0px;
+    height: 100%;
+
+}
   </style>
 </head>
 <body>
 	<!-- Navigation (Stays on Top) -->
-<div class="w3-top w3-bar">
+<div class="w3-top w3-center w3-bar">
   <a href="index.html" class="w3-bar-item w3-button w3-mobile">Home</a>
 <a href="funny.html" class="w3-bar-item w3-button w3-mobile">Funny</a>
 <a href="fears.html" class="w3-bar-item w3-button w3-mobile">Fears</a>
@@ -40,20 +44,19 @@
 <section class="intro">
   <h1>Welcome to my corner of the web:)</h1>
   <p>Feel free to click around to learn more about me</p>
-  <a href="designinspo.html">Click here to see my design insporation</a>
+  <div class="w3-auto photosection" style="max-width:500px">
+    <p>I love flowers and photography please find some of my favorite pictures I have taken below</p>
+    <img class="mySlides" src="images/flowersfavs/flower1.jpg" style="width:100%">
+    <img class="mySlides" src="images/flowersfavs/flower3.jpg" style="width:100%">
+    <img class="mySlides" src="images/flowersfavs/flower4.jpg" style="width:100%">
+    <img class="mySlides" src="images/flowersfavs/flower5.jpg" style="width:100%">
+    <img class="mySlides" src="images/flowersfavs/flower6.jpg" style="width:100%">
+    <img class="mySlides" src="images/flowersfavs/flower7.jpg" style="width:100%">
+    <img class="mySlides" src="images/flowersfavs/flower8.jpg" style="width:100%">
+  </div>
+  <a href="designinspo.html" class="w3-hover-pale-green">Click here to see my design insporation</a>
   </section>
 
-<div class="w3-content w3-section" style="max-width:500px">
-  <p>i love flowers and photography please find some of my favorite pictures I have taken below</p>
-  <img class="mySlides" src="/images/flowersfavs/flower1.jpg" style="width:100%">
-  <img class="mySlides" src="/images/flowersfavs/flower3.jpg" style="width:100%">
-  <img class="mySlides" src="/images/flowersfavs/flower4.jpg" style="width:100%">
-  <img class="mySlides" src="/images/flowersfavs/flower5.jpg" style="width:100%">
-  <img class="mySlides" src="/images/flowersfavs/flower6.jpg" style="width:100%">
-  <img class="mySlides" src="/images/flowersfavs/flower7.jpg" style="width:100%">
-  <img class="mySlides" src="/images/flowersfavs/flower8.jpg" style="width:100%">
-
-</div>
 
 <script>
 var myIndex = 0;
