missing n in index.html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <a href="favs.html" class="w3-bar-item w3-button w3-mobile">Favs</a>
 <a href="freebie.html" class="w3-bar-item w3-button w3-mobile">Freebie</a>
 <a href="fav1liner.html" class="w3-bar-item w3-button w3-mobile">Favorite 1-liner</a>
-<a class="w3-bar-item w3-mobile t1">Abby's Website</h1>
+<a class="w3-bar-item w3-mobile t1" style="width:33.3%; font-size: large;">Abby's Website</h1>
 </div>
 <section class="intro">
   <h1>Welcome to my corner of the web:)</h1>
@@ -54,7 +54,9 @@
     <img class="mySlides" src="images/flowersfavs/flower7.jpg" style="width:100%">
     <img class="mySlides" src="images/flowersfavs/flower8.jpg" style="width:100%">
   </div>
-  <a href="designinspo.html" class="w3-hover-pale-green">Click here to see my design insporation</a>
+  <br>
+  <br>
+  <a href="designinspo.html" class="w3-btn w3-hover-pale-green  w3-round-large w3-border-blue w3-padding-large">Click here to see my design insporation</a>
   </section>
 
 
