--- a/designinspo.html
+++ b/designinspo.html
@@ -39,7 +39,7 @@ body{
 <a href="favs.html" class="w3-bar-item w3-button w3-mobile">Favs</a>
 <a href="freebie.html" class="w3-bar-item w3-button w3-mobile">Freebie</a>
 <a href="fav1liner.html" class="w3-bar-item w3-button w3-mobile">Fav1Liner</a>
-<a class="w3-bar-item w3-mobile t1">Abby's Website</h1>
+<a class="w3-bar-item w3-mobile t1" style="width:33.3%; font-size:large;">Abby's Website</h1>
 </div>
 <br>
 <br>
