Updated nav bar

--- a/designinspo.html
+++ b/designinspo.html
@@ -20,6 +20,7 @@ body{
   .t1{
     color:#66ccff;
     font-weight: bold;
+    text-decoration: none;
   }
   img {
   max-width: 100%;
@@ -39,7 +40,7 @@ body{
 <a href="favs.html" class="w3-bar-item w3-button w3-mobile">Favs</a>
 <a href="freebie.html" class="w3-bar-item w3-button w3-mobile">Freebie</a>
 <a href="fav1liner.html" class="w3-bar-item w3-button w3-mobile">Fav1Liner</a>
-<a class="w3-bar-item w3-mobile t1" style="width:33.3%; font-size:large;">Abby's Website</h1>
+<a href="index.html" class="w3-bar-item w3-mobile t1" style="width:33.3%; font-size: large;">Abby's Website</a>
 </div>
 <br>
 <br>
