--- a/favs.html
+++ b/favs.html
@@ -7,13 +7,14 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <script src="https://www.w3schools.com/lib/w3.js"></script>
 <style>
- 
+
   body{
     padding:50px;
   }
   .t1{
     color:#66ccff;
     font-weight: bold;
+    text-decoration: none;
   }
   .content {
   padding: 16px;
@@ -57,12 +58,12 @@
 <body>
 	<!-- Navigation (Stays on Top) -->
 <div class="w3-top w3-bar">
-<a href="idex.html" class="w3-bar-item w3-button w3-mobile">Home</a>
+<a href="index.html" class="w3-bar-item w3-button w3-mobile">Home</a>
 <a href="funny.html" class="w3-bar-item w3-button w3-mobile">Funny</a>
 <a href="fears.html" class="w3-bar-item w3-button w3-mobile">Fears</a>
 <a href="freebie.html" class="w3-bar-item w3-button w3-mobile">Freebie</a>
 <a href="fav1liner.html" class="w3-bar-item w3-button w3-mobile">Favorite 1-liner</a>
-<a class="w3-bar-item w3-mobile t1">Abby's Website</h1>
+<a href="index.html" class="w3-bar-item w3-mobile t1" style="width:33.3%; font-size: large;">Abby's Website</a>
 </div>
 <br>
 <br>
