--- a/fears.html
+++ b/fears.html
@@ -19,8 +19,8 @@
   .t1{
     color:#66ccff;
     font-weight: bold;
+    text-decoration: none;
   }
-
 
 
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, p, .h6 {
@@ -48,12 +48,12 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, p, .h6 {
 <a href="favs.html" class="w3-bar-item w3-button w3-mobile">Favs</a>
 <a href="freebie.html" class="w3-bar-item w3-button w3-mobile">Freebie</a>
 <a href="fav1liner.html" class="w3-bar-item w3-button w3-mobile">Favorite 1-liner</a>
-<a class="w3-bar-item w3-mobile t1">Abby's Website</h1>
+<a href="index.html" class="w3-bar-item w3-mobile t1" style="width:33.3%; font-size: large;">Abby's Website</a>
 </div>
 <br>
 
 		<h1>Fear</h1>
-	
+
 
 
 <div class="w3-row w3-border">
@@ -76,6 +76,6 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, p, .h6 {
 			<p>Find more information on why spiders are scary <a>here</a></p>
 </div>
 
-  
+
 </body>
 </html>
