--- a/freebie.html
+++ b/freebie.html
@@ -13,6 +13,7 @@
   .t1{
     color:#66ccff;
     font-weight: bold;
+    text-decoration: none;
   }
   </style>
 </head>
@@ -20,12 +21,12 @@
 <body>
 	<!-- Navigation (Stays on Top) -->
 <div class="w3-top w3-bar">
-<a href="idex.html" class="w3-bar-item w3-button w3-mobile">Home</a>
+<a href="index.html" class="w3-bar-item w3-button w3-mobile">Home</a>
 <a href="funny.html" class="w3-bar-item w3-button w3-mobile">Funny</a>
 <a href="fears.html" class="w3-bar-item w3-button w3-mobile">Fears</a>
 <a href="favs.html" class="w3-bar-item w3-button w3-mobile">Favs</a>
 <a href="fav1liner.html" class="w3-bar-item w3-button w3-mobile">Favorite 1-liner</a>
-<a class="w3-bar-item w3-mobile t1">Abby's Website</h1>
+<a href="index.html" class="w3-bar-item w3-mobile t1" style="width:33.3%; font-size: large;">Abby's Website</a>
 </div>
 <br>
 <br>
@@ -37,7 +38,7 @@
 			window.PixleeAsyncInit = function() {Pixlee.init({apiKey:'GuKk8PN3mIV9EuasDUFt'});Pixlee.addSimpleWidget({widgetId:'30807'});};
 			</script>
 			<script src="//instafeed.assets.pxlecdn.com/assets/pixlee_widget_1_0_0.js">
-			</script> 
+			</script>
 		</div>
 	</div>
 </body>
