--- a/funny.html
+++ b/funny.html
@@ -11,7 +11,7 @@
 .punchline {
   display: none;
 }
-    
+
 .joke:hover > .punchline {
   display: block;
   color: #66ccff;
@@ -35,8 +35,8 @@ p{
   .t1{
     color:#66ccff;
     font-weight: bold;
+    text-decoration: none;
   }
-  
   </style>
 
 </head>
@@ -48,7 +48,7 @@ p{
 <a href="favs.html" class="w3-bar-item w3-button w3-mobile">Favs</a>
 <a href="freebie.html" class="w3-bar-item w3-button w3-mobile">Freebie</a>
 <a href="fav1liner.html" class="w3-bar-item w3-button w3-mobile">Favorite 1-liner</a>
-<a class="w3-bar-item w3-mobile t1">Abby's Website</h1>
+<a href="index.html" class="w3-bar-item w3-mobile t1" style="width:33.3%; font-size: large;">Abby's Website</a>
 </div>
 <br>
 <br>
