--- a/index.html
+++ b/index.html
@@ -20,13 +20,12 @@
   .t1{
     color:#66ccff;
     font-weight: bold;
+    text-decoration: none;
   }
 .photosection{
-
   background-color: #d3d3d3;
   margin: 0px;
     height: 100%;
-
 }
   </style>
 </head>
@@ -39,7 +38,7 @@
 <a href="favs.html" class="w3-bar-item w3-button w3-mobile">Favs</a>
 <a href="freebie.html" class="w3-bar-item w3-button w3-mobile">Freebie</a>
 <a href="fav1liner.html" class="w3-bar-item w3-button w3-mobile">Favorite 1-liner</a>
-<a class="w3-bar-item w3-mobile t1" style="width:33.3%; font-size: large;">Abby's Website</h1>
+<a href="index.html" class="w3-bar-item w3-mobile t1" style="width:33.3%; font-size: large;">Abby's Website</a>
 </div>
 <section class="intro">
   <h1>Welcome to my corner of the web:)</h1>
