--- a/fav1liner.html
+++ b/fav1liner.html
@@ -20,6 +20,7 @@ body{
   .t1{
     color:#66ccff;
     font-weight: bold;
+    text-decoration: none;
   }
   </style>
 
@@ -29,23 +30,23 @@ body{
 
 	<!-- Navigation (Stays on Top) -->
 <div class="w3-top w3-bar">
-<a href="idex.html" class="w3-bar-item w3-button w3-mobile">Home</a>
+<a href="index.html" class="w3-bar-item w3-button w3-mobile">Home</a>
 <a href="funny.html" class="w3-bar-item w3-button w3-mobile">Funny</a>
 <a href="fears.html" class="w3-bar-item w3-button w3-mobile">Fears</a>
 <a href="favs.html" class="w3-bar-item w3-button w3-mobile">Favs</a>
 <a href="freebie.html" class="w3-bar-item w3-button w3-mobile">Freebie</a>
-<a class="w3-bar-item w3-mobile t1">Abby's Website</h1>
+<a href="index.html" class="w3-bar-item w3-mobile t1" style="width:33.3%; font-size: large;">Abby's Website</a>
 </div>
 <br>
 <br>
 <h1>Fav1Liner</h1>
 
 <div class="w3-row w3-border">
-  <div class="w3-container w3-half"> 
+  <div class="w3-container w3-half">
     <iframe src="https://www.youtube.com/embed/_bXSVc8lN7o"   frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   <div class="w3-container w3-half">
-    <h2>"YOU CAN'T SIT WITH US"</h2>  
+    <h2>"YOU CAN'T SIT WITH US"</h2>
   </div>
 </div>
 </body>
