Updated funny added a picture

--- a/fears.html
+++ b/fears.html
@@ -15,6 +15,13 @@
 
   body{
     padding:50px;
+    margin: 0 0 18px;
+    font-family: "futura-pt";
+    line-height: 1.2;
+    letter-spacing: 0.2em;
+    font-weight: 300;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
   }
   .t1{
     color:#66ccff;
