--- a/funny.html
+++ b/funny.html
@@ -1,73 +1,83 @@
 <!DOCTYPE html>
+<html>
 <head>
-<html lang="en">
-<meta charset="UTF-8">
-<title>Funny</title>
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<script src="https://www.w3schools.com/lib/w3.js"></script>
-<style>
+	<meta charset="UTF-8">
+	<title>Funny</title>
+	<meta content="width=device-width,initial-scale=1" name="viewport">
+	<link href="https://www.w3schools.com/w3css/4/w3.css" rel="stylesheet">
+	<script src="https://www.w3schools.com/lib/w3.js">
+	</script>
+	<style>
 
-.punchline {
-  display: none;
-}
+	   .punchline {
+	    display: none;
+	   }
 
-.joke:hover > .punchline {
-  display: block;
-  color: #66ccff;
-}
-.joke{
-  color:black;
-}
-p{
-  color:black;
-}
-  body{
-    padding:50px;
-     margin: 0 0 18px;
-    font-family: "futura-pt";
-    line-height: 1.2;
-    letter-spacing: 0.1em;
-    font-weight: 300;
-    overflow-wrap: break-word;
-    word-wrap: break-word;
-  }
-  .t1{
-    color:#66ccff;
-    font-weight: bold;
-    text-decoration: none;
-  }
-  </style>
+	   .joke:hover > .punchline {
+	    display: block;
+	    color: #66ccff;
+       line-height: 1.2;
+	   }
+	   .joke{
+	    color:black;
+	   }
+	   p{
+	    color:black;
+	   }
+	    body{
+	      padding:50px;
+	       margin: 0 0 18px;
+	      font-family: "futura-pt";
+	      line-height: 1.2;
+	      letter-spacing: 0.1em;
+	      font-weight: 300;
+	      overflow-wrap: break-word;
+	      word-wrap: break-word;
+	    }
+	    .t1{
+	      color:#66ccff;
+	      font-weight: bold;
+	      font-size:large;
+	      text-decoration: none;
 
+	    }
+	</style>
 </head>
 <body>
 	<!-- Navigation (Stays on Top) -->
-<div class="w3-top w3-bar">
-<a href="index.html" class="w3-bar-item w3-button w3-mobile">Home</a>
-<a href="fears.html" class="w3-bar-item w3-button w3-mobile">Fears</a>
-<a href="favs.html" class="w3-bar-item w3-button w3-mobile">Favs</a>
-<a href="freebie.html" class="w3-bar-item w3-button w3-mobile">Freebie</a>
-<a href="fav1liner.html" class="w3-bar-item w3-button w3-mobile">Favorite 1-liner</a>
-<a href="index.html" class="w3-bar-item w3-mobile t1" style="width:33.3%; font-size: large;">Abby's Website</a>
-</div>
-<br>
-<br>
+	<div class="w3-top w3-bar">
+		<a class="w3-bar-item w3-button w3-mobile" href="index.html">Home</a>
+    <a class="w3-bar-item w3-button w3-mobile" href="fears.html">Fears</a>
+    <a class="w3-bar-item w3-button w3-mobile" href="favs.html">Favs</a>
+    <a class="w3-bar-item w3-button w3-mobile" href="freebie.html">Freebie</a>
+    <a class="w3-bar-item w3-button w3-mobile" href="fav1liner.html">Favorite 1-liner</a>
+    <a class="w3-bar-item w3-mobile t1" href="index.html" style="width:33.3%; font-size: large;">Abby's Website</a>
+	</div><br>
+	<br>
 	<div class="funny">
-		<p>Who is grading this website? Dr. Spell so lets make the jokes things he would funny. I hope you enjoy some cringey dad jokes: hover
-		over to see the answer.</p>
+		<p>Who is grading this website? Dr. Spell so lets make the jokes things he would funny. I hope you enjoy some cringey dad jokes: hover over to see the answer.</p>
+<div class="joke">
+			Why don't eggs tell jokes?
+			<div class="punchline">
+				They'd crack each other up
+        <br>
+        <img src="https://synchromiss.files.wordpress.com/2013/10/egg.jpg">
+			</div>
+		</div>
 
-<div class="joke">Why don't eggs tell jokes?
-<div class="punchline">They'd crack each other up</div>
-</div>
+		<div class="joke">
+			Why don't you trust stairs?
+			<div class="punchline">
+				They're always up to something.
+			</div>
+		</div>
 
-<div class="joke">Why don't you trust stairs?
-<div class="punchline">They're always up to something.</div>
-</div>
-
-<div class="joke">What do you call someone with no body and no nose?
-<div class="punchline">Nobody knows</div>
-</div>
-
-</div>
+		<div class="joke">
+			What do you call someone with no body and no nose?
+			<div class="punchline">
+				Nobody knows
+			</div>
+		</div>
+	</div>
 </body>
 </html>
