Embedded instagram onto website

--- a/freebie.html
+++ b/freebie.html
@@ -39,14 +39,9 @@
 <br>
 <h1>Freebie</h1>
 <p>Embedded please find my proffesional instagram:</p>
-	<div>
-			<div id="pixlee_container"></div>
-			<script type="text/javascript">
-			window.PixleeAsyncInit = function() {Pixlee.init({apiKey:'GuKk8PN3mIV9EuasDUFt'});Pixlee.addSimpleWidget({widgetId:'30807'});};
-			</script>
-			<script src="//instafeed.assets.pxlecdn.com/assets/pixlee_widget_1_0_0.js">
-			</script>
-		</div>
+
+<div class='embedsocial-instagram' data-ref="ed133eaddfe66fc182419140449ac24f2741f4bc"></div><script>(function(d, s, id){var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/embedscript/in.js"; d.getElementsByTagName("head")[0].appendChild(js);}(document, "script", "EmbedSocialInstagramScript"));</script>
+
 	</div>
 </body>
 </html>
