Updated fav 1 liner

--- a/fav1liner.html
+++ b/fav1liner.html
@@ -22,6 +22,15 @@ body{
     font-weight: bold;
     text-decoration: none;
   }
+  .c{
+    background-color:#66ccff;
+    padding:50px;
+     margin: 0 0 18px;
+     text-align: center;
+  }
+  .saying{
+    font-size: 45px;
+  }
   </style>
 
 </head>
@@ -40,13 +49,11 @@ body{
 <br>
 <br>
 <h1>Fav1Liner</h1>
-
-<div class="w3-row w3-border">
-  <div class="w3-container w3-half">
+<div class="c">
     <iframe src="https://www.youtube.com/embed/_bXSVc8lN7o"   frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </div>
-  <div class="w3-container w3-half">
-    <h2>"YOU CAN'T SIT WITH US"</h2>
+<br>
+<br>
+    <h2 class="saying">"YOU CAN'T SIT WITH US"</h2>
   </div>
 </div>
 </body>
