--- a/funny.html
+++ b/funny.html
@@ -55,6 +55,7 @@
 	</div><br>
 	<br>
 	<div class="funny">
+    <h1>Funny</h1>
 		<p>Who is grading this website? Dr. Spell so lets make the jokes things he would funny. I hope you enjoy some cringey dad jokes: hover over to see the answer.</p>
 <div class="joke">
 			Why don't eggs tell jokes?
