--- a/fav1liner.html
+++ b/fav1liner.html
@@ -41,19 +41,20 @@ body{
 
 
 	<!-- Navigation (Stays on Top) -->
-<div class="w3-top w3-bar">
+<div class="w3-top w3-bar w3-center">
 <a href="index.html" class="w3-bar-item w3-button w3-mobile">Home</a>
 <a href="funny.html" class="w3-bar-item w3-button w3-mobile">Funny</a>
 <a href="fears.html" class="w3-bar-item w3-button w3-mobile">Fears</a>
 <a href="favs.html" class="w3-bar-item w3-button w3-mobile">Favs</a>
 <a href="freebie.html" class="w3-bar-item w3-button w3-mobile">Freebie</a>
+<a href="fav1liner.html" class="w3-bar-item w3-button w3-mobile w3-hide">Favorite 1-liner</a>
 <a href="index.html" class="w3-bar-item w3-mobile t1" style="width:33.3%; font-size: large;">Abby's Website</a>
 </div>
 <br>
 <br>
 <h1>Fav1Liner</h1>
 <div class="c">
-    <iframe src="https://www.youtube.com/embed/_bXSVc8lN7o"   frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/_bXSVc8lN7o" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br>
 <br>
     <h2 class="saying">"YOU CAN'T SIT WITH US"</h2>
