--- a/funny.html
+++ b/funny.html
@@ -48,13 +48,14 @@
 </head>
 <body>
 	<!-- Navigation (Stays on Top) -->
-	<div class="w3-top w3-bar">
-		<a class="w3-bar-item w3-button w3-mobile" href="index.html">Home</a>
-    <a class="w3-bar-item w3-button w3-mobile" href="fears.html">Fears</a>
-    <a class="w3-bar-item w3-button w3-mobile" href="favs.html">Favs</a>
-    <a class="w3-bar-item w3-button w3-mobile" href="freebie.html">Freebie</a>
-    <a class="w3-bar-item w3-button w3-mobile" href="fav1liner.html">Favorite 1-liner</a>
-    <a class="w3-bar-item w3-mobile t1" href="index.html" style="width:33.3%; font-size: large;">Abby's Website</a>
+	<div class="w3-top w3-center w3-bar">
+	  <a href="index.html" class="w3-bar-item w3-button w3-mobile">Home</a>
+	<a href="funny.html" class="w3-bar-item w3-button w3-mobile w3-hidden">Funny</a>
+	<a href="fears.html" class="w3-bar-item w3-button w3-mobile">Fears</a>
+	<a href="favs.html" class="w3-bar-item w3-button w3-mobile">Favs</a>
+	<a href="freebie.html" class="w3-bar-item w3-button w3-mobile">Freebie</a>
+	<a href="fav1liner.html" class="w3-bar-item w3-button w3-mobile">Favorite 1-liner</a>
+	<a href="index.html" class="w3-bar-item w3-mobile t1" style="width:33.3%; font-size: large;">Abby's Website</a>
 	</div><br>
 	<br>
 	<div class="funny">
