--- a/fears.html
+++ b/fears.html
@@ -46,14 +46,15 @@ p{letter-spacing: 0em;}
 </head>
 <body>
 	<!-- Navigation (Stays on Top) -->
-<div class="w3-top w3-bar">
-<a href="index.html" class="w3-bar-item w3-button w3-mobile">Home</a>
-<a href="funny.html" class="w3-bar-item w3-button w3-mobile">Funny</a>
-<a href="favs.html" class="w3-bar-item w3-button w3-mobile">Favs</a>
-<a href="freebie.html" class="w3-bar-item w3-button w3-mobile">Freebie</a>
-<a href="fav1liner.html" class="w3-bar-item w3-button w3-mobile">Favorite 1-liner</a>
-<a href="index.html" class="w3-bar-item w3-mobile t1" style="width:33.3%; font-size: large;">Abby's Website</a>
-</div>
+  <div class="w3-top w3-center w3-bar">
+    <a href="index.html" class="w3-bar-item w3-button w3-mobile">Home</a>
+  <a href="funny.html" class="w3-bar-item w3-button w3-mobile">Funny</a>
+  <a href="fears.html" class="w3-bar-item w3-button w3-mobile w3-hide">Fears</a>
+  <a href="favs.html" class="w3-bar-item w3-button w3-mobile">Favs</a>
+  <a href="freebie.html" class="w3-bar-item w3-button w3-mobile">Freebie</a>
+  <a href="fav1liner.html" class="w3-bar-item w3-button w3-mobile">Favorite 1-liner</a>
+  <a href="index.html" class="w3-bar-item w3-mobile t1" style="width:33.3%; font-size: large;">Abby's Website</a>
+  </div>
 <br>
 
 
