--- a/freebie.html
+++ b/freebie.html
@@ -27,14 +27,15 @@
 
 <body>
 	<!-- Navigation (Stays on Top) -->
-<div class="w3-top w3-bar">
-<a href="index.html" class="w3-bar-item w3-button w3-mobile">Home</a>
-<a href="funny.html" class="w3-bar-item w3-button w3-mobile">Funny</a>
-<a href="fears.html" class="w3-bar-item w3-button w3-mobile">Fears</a>
-<a href="favs.html" class="w3-bar-item w3-button w3-mobile">Favs</a>
-<a href="fav1liner.html" class="w3-bar-item w3-button w3-mobile">Favorite 1-liner</a>
-<a href="index.html" class="w3-bar-item w3-mobile t1" style="width:33.3%; font-size: large;">Abby's Website</a>
-</div>
+  <div class="w3-top w3-center w3-bar">
+    <a href="index.html" class="w3-bar-item w3-button w3-mobile">Home</a>
+  <a href="funny.html" class="w3-bar-item w3-button w3-mobile">Funny</a>
+  <a href="fears.html" class="w3-bar-item w3-button w3-mobile">Fears</a>
+  <a href="favs.html" class="w3-bar-item w3-button w3-mobile">Favs</a>
+  <a href="freebie.html" class="w3-bar-item w3-button w3-mobile w3-hide">Freebie</a>
+  <a href="fav1liner.html" class="w3-bar-item w3-button w3-mobile">Favorite 1-liner</a>
+  <a href="index.html" class="w3-bar-item w3-mobile t1" style="width:33.3%; font-size: large;">Abby's Website</a>
+  </div>
 <br>
 <br>
 <h1>Freebie</h1>
