--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <section class="intro">
   <h1>Welcome to my corner of the web:)</h1>
   <p>Feel free to click around to learn more about me</p>
-  <div class="w3-auto photosection" style="max-width:500px">
+  <div class="w3-padding-large photosection">
     <p>I love flowers and photography please find some of my favorite pictures I have taken below</p>
     <img class="mySlides" src="images/flowersfavs/flower1.jpg" style="width:100%">
     <img class="mySlides" src="images/flowersfavs/flower3.jpg" style="width:100%">
