Added afunction so that it console.log url

--- a/designinspo.html
+++ b/designinspo.html
@@ -27,9 +27,14 @@ body{
   height: auto;
 }
   </style>
+  <script type="text/javascript">
+        function afunction() {
+          console.log("The URL of this page is: " + window.location.href);
+        }
 
+        </script>
 </head>
-<body>
+<body onload="afunction();">
 
 
 	<!-- Navigation (Stays on Top) -->
