--- a/fears.html
+++ b/fears.html
@@ -42,9 +42,14 @@ p{letter-spacing: 0em;}
 
 
 
+  <script type="text/javascript">
+        function afunction() {
+          console.log("The URL of this page is: " + window.location.href);
+        }
 
+        </script>
 </head>
-<body>
+<body onload="afunction();">
 	<!-- Navigation (Stays on Top) -->
   <div class="w3-top w3-center w3-bar">
     <a href="index.html" class="w3-bar-item w3-button w3-mobile">Home</a>
