--- a/freebie.html
+++ b/freebie.html
@@ -23,9 +23,14 @@
     text-decoration: none;
   }
   </style>
-</head>
+  <script type="text/javascript">
+        function afunction() {
+          console.log("The URL of this page is: " + window.location.href);
+        }
 
-<body>
+        </script>
+</head>
+<body onload="afunction();">
 	<!-- Navigation (Stays on Top) -->
   <div class="w3-top w3-center w3-bar">
     <a href="index.html" class="w3-bar-item w3-button w3-mobile">Home</a>
