--- a/funny.html
+++ b/funny.html
@@ -45,12 +45,18 @@
 				letter-spacing: 0.2em;
 			}
 	</style>
+	<script type="text/javascript">
+        function afunction() {
+          console.log("The URL of this page is: " + window.location.href);
+        }
+
+        </script>
 </head>
-<body>
+<body onload="afunction();">
 	<!-- Navigation (Stays on Top) -->
 	<div class="w3-top w3-center w3-bar">
 	  <a href="index.html" class="w3-bar-item w3-button w3-mobile">Home</a>
-	<a href="funny.html" class="w3-bar-item w3-button w3-mobile w3-hidden">Funny</a>
+	<a href="funny.html" class="w3-bar-item w3-button w3-mobile w3-hide">Funny</a>
 	<a href="fears.html" class="w3-bar-item w3-button w3-mobile">Fears</a>
 	<a href="favs.html" class="w3-bar-item w3-button w3-mobile">Favs</a>
 	<a href="freebie.html" class="w3-bar-item w3-button w3-mobile">Freebie</a>
