--- a/index.html
+++ b/index.html
@@ -27,9 +27,16 @@
   margin: 0px;
     height: 100%;
 }
+
   </style>
+  <script type="text/javascript">
+        function afunction() {
+          console.log("The URL of this page is: " + window.location.href);
+        }
+
+        </script>
 </head>
-<body>
+<body onload="afunction();">
 	<!-- Navigation (Stays on Top) -->
 <div class="w3-top w3-center w3-bar">
   <a href="index.html" class="w3-bar-item w3-button w3-mobile">Home</a>
