Deleted hi comment and organized spacing

--- a/index.html
+++ b/index.html
@@ -1,94 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-<meta charset="UTF-8">
-<title>Homepage</title>
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<script src="https://www.w3schools.com/lib/w3.js"></script>
-<style>
-  body{
-    padding:50px;
-    margin: 0 0 18px;
-    font-family: "futura-pt";
-    line-height: 1.2;
-    letter-spacing: 0.2em;
-    font-weight: 300;
-    overflow-wrap: break-word;
-    word-wrap: break-word;
-  }
-  .t1{
-    color:#66ccff;
-    font-weight: bold;
-    text-decoration: none;
-  }
-.photosection{
-  background-color: #d3d3d3;
-  margin: 0px;
-    height: 100%;
-}
+<head>
+	<meta charset="UTF-8">
+	<title>Homepage</title>
+	<meta content="width=device-width,initial-scale=1" name="viewport">
+	<link href="https://www.w3schools.com/w3css/4/w3.css" rel="stylesheet">
+	<script src="https://www.w3schools.com/lib/w3.js">
+	</script>
+	<style>
+	 body{
+	   padding:50px;
+	   margin: 0 0 18px;
+	   font-family: "futura-pt";
+	   line-height: 1.2;
+	   letter-spacing: 0.2em;
+	   font-weight: 300;
+	   overflow-wrap: break-word;
+	   word-wrap: break-word;
+	 }
+	 .t1{
+	   color:#66ccff;
+	   font-weight: bold;
+	   text-decoration: none;
+	 }
+	.photosection{
+	 background-color: #d3d3d3;
+	 margin: 0px;
+	   height: 100%;
+	}
 
-  </style>
-  <script type="text/javascript">
-        function afunction() {
-          console.log("The URL of this page is: " + window.location.href);
-        }
+	</style>
+	<script type="text/javascript">
+	       function afunction() {
+	         console.log("The URL of this page is: " + window.location.href);
+	       }
 
-        </script>
+	</script>
 </head>
 <body onload="afunction();">
 	<!-- Navigation (Stays on Top) -->
-<div class="w3-top w3-center w3-bar">
-  <a href="index.html" class="w3-bar-item w3-button w3-mobile">Home</a>
-<a href="funny.html" class="w3-bar-item w3-button w3-mobile">Funny</a>
-<a href="fears.html" class="w3-bar-item w3-button w3-mobile">Fears</a>
-<a href="favs.html" class="w3-bar-item w3-button w3-mobile">Favs</a>
-<a href="freebie.html" class="w3-bar-item w3-button w3-mobile">Freebie</a>
-<a href="fav1liner.html" class="w3-bar-item w3-button w3-mobile">Favorite 1-liner</a>
-<a href="index.html" class="w3-bar-item w3-mobile t1" style="width:33.3%; font-size: large;">Abby's Website</a>
-</div>
-<section class="intro">
-  <h1>Welcome to my corner of the web:)</h1>
-  <p>Feel free to click around to learn more about me</p>
-  <div class="w3-padding-large photosection">
-    <p>I love flowers and photography please find some of my favorite pictures I have taken below</p>
-    <img class="mySlides" src="images/flowersfavs/flower1.jpg" style="width:100%">
-    <img class="mySlides" src="images/flowersfavs/flower3.jpg" style="width:100%">
-    <img class="mySlides" src="images/flowersfavs/flower4.jpg" style="width:100%">
-    <img class="mySlides" src="images/flowersfavs/flower5.jpg" style="width:100%">
-    <img class="mySlides" src="images/flowersfavs/flower6.jpg" style="width:100%">
-    <img class="mySlides" src="images/flowersfavs/flower7.jpg" style="width:100%">
-    <img class="mySlides" src="images/flowersfavs/flower8.jpg" style="width:100%">
-  </div>
-  <br>
-  <br>
-  <a href="designinspo.html" class="w3-btn w3-hover-pale-green  w3-round-large w3-border-blue w3-padding-large">Click here to see my design insporation</a>
-  </section>
+	<div class="w3-top w3-center w3-bar">
+		<a class="w3-bar-item w3-button w3-mobile" href="index.html">Home</a> <a class="w3-bar-item w3-button w3-mobile" href="funny.html">Funny</a> <a class="w3-bar-item w3-button w3-mobile" href="fears.html">Fears</a> <a class="w3-bar-item w3-button w3-mobile" href="favs.html">Favs</a> <a class="w3-bar-item w3-button w3-mobile" href="freebie.html">Freebie</a> <a class="w3-bar-item w3-button w3-mobile" href="fav1liner.html">Favorite 1-liner</a> <a class="w3-bar-item w3-mobile t1" href="index.html" style="width:33.3%; font-size: large;">Abby's Website</a>
+	</div>
+	<section class="intro">
+		<h1>Welcome to my corner of the web:)</h1>
+		<p>Feel free to click around to learn more about me</p>
+		<div class="w3-padding-large photosection">
+		<p>I love flowers and photography please find some of my favorite pictures I have taken below</p><img class="mySlides" src="images/flowersfavs/flower1.jpg" style="width:100%"> <img class="mySlides" src="images/flowersfavs/flower3.jpg" style="width:100%"> <img class="mySlides" src="images/flowersfavs/flower4.jpg" style="width:100%"> <img class="mySlides" src="images/flowersfavs/flower5.jpg" style="width:100%"> <img class="mySlides" src="images/flowersfavs/flower6.jpg" style="width:100%"> <img class="mySlides" src="images/flowersfavs/flower7.jpg" style="width:100%"> <img class="mySlides" src="images/flowersfavs/flower8.jpg" style="width:100%"></div><br>
+		<br>
+		<a class="w3-btn w3-hover-pale-green w3-round-large w3-border-blue w3-padding-large" href="designinspo.html">Click here to see my design insporation</a>
+	</section>
+	<script>
+	var myIndex = 0;
+	carousel();
 
+	function carousel() {
+	 var i;
+	 var x = document.getElementsByClassName("mySlides");
+	 for (i = 0; i < x.length; i++) {
+	   x[i].style.display = "none";
+	 }
+	 myIndex++;
+	 if (myIndex > x.length) {myIndex = 1}
+	 x[myIndex-1].style.display = "block";
+	 setTimeout(carousel, 2000); // Change image every 2 seconds
 
-<script>
-var myIndex = 0;
-carousel();
-
-function carousel() {
-  var i;
-  var x = document.getElementsByClassName("mySlides");
-  for (i = 0; i < x.length; i++) {
-    x[i].style.display = "none";
-  }
-  myIndex++;
-  if (myIndex > x.length) {myIndex = 1}
-  x[myIndex-1].style.display = "block";
-  setTimeout(carousel, 2000); // Change image every 2 seconds
-
-  //hi
-}
-</script>
-
-
-
-
-
-
+	}
+	</script>
 </body>
 </html>
