Fixed spelling issue

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		<div class="w3-padding-large photosection">
 		<p>I love flowers and photography please find some of my favorite pictures I have taken below</p><img class="mySlides" src="images/flowersfavs/flower1.jpg" style="width:100%"> <img class="mySlides" src="images/flowersfavs/flower3.jpg" style="width:100%"> <img class="mySlides" src="images/flowersfavs/flower4.jpg" style="width:100%"> <img class="mySlides" src="images/flowersfavs/flower5.jpg" style="width:100%"> <img class="mySlides" src="images/flowersfavs/flower6.jpg" style="width:100%"> <img class="mySlides" src="images/flowersfavs/flower7.jpg" style="width:100%"> <img class="mySlides" src="images/flowersfavs/flower8.jpg" style="width:100%"></div><br>
 		<br>
-		<a class="w3-btn w3-hover-pale-green w3-round-large w3-border-blue w3-padding-large" href="designinspo.html">Click here to see my design insporation</a>
+		<a class="w3-btn w3-hover-pale-green w3-round-large w3-border-blue w3-padding-large" href="designinspo.html">Click here to see my design inspiration</a>
 	</section>
 	<script>
 	var myIndex = 0;
